# PromptShield

./: .env.example  .gitignore  .promptshield.yaml.example  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: cli.py  dataset.py  metrics.py  report.py  run.py  runner.py  scanner.py
promptshield/: __init__.py  config.py  shield.py
promptshield/cli/: main.py
promptshield/data/: attack_patterns.json
promptshield/detection/: llm_engine.py  pipeline.py  regex_engine.py  vector_engine.py
promptshield/schemas/: scan.py
promptshield/server/: app.py
specs/001-core-api/: _SUPERSEDED_README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-api/checklists/: api-security.md  requirements.md
specs/001-core-api/contracts/: api.md
specs/002-cli-tool/: plan.md  spec.md  tasks.md
specs/003-vector-engine-refactor/: plan.md  spec.md  tasks.md
specs/004-vector-engine-scoring/: plan.md  spec.md  tasks.md
specs/005-benchmarks/: plan.md  spec.md  tasks.md
specs/006-benchmark-sweep/: plan.md  spec.md  tasks.md
src/: __init__.py  config.py  shield.py
src/cli/: main.py
src/detection/: llm_engine.py  pipeline.py  vector_engine.py
src/server/: app.py
tests/integration/: test_cli.py  test_server.py
tests/unit/: test_shield.py  test_vector_engine.py  test_vector_engine_scoring.py
